--- a/styles.css
+++ b/styles.css
@@ -70,12 +70,14 @@ header .profile-image {
   margin-top: 50px;
   width: 150px;
   height: 150px;
-  border-radius: 50%;
-  border: 3px solid yellow;
+  border-radius: 35%;
+  border: 5px solid #7701bb;
+  box-shadow: 0 0 15px #000000;
   transition: all .5s;
 }
 header .profile-image:hover {
-  transform: scale(1.2) rotate(5deg);
+  transform: scale(1.5) rotate(370deg);
+  transition: .5s ease;
 }
 .tag {
   background-color: #efefef;
@@ -92,8 +94,8 @@ header .profile-image:hover {
 .skills-card {
   margin: 30px;
   padding: 20px 40px 40px;
-  max-width: 0px;
-  text-align: left;
+  max-width: 800px;
+  text-align: center;
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
@@ -102,12 +104,22 @@ header .profile-image:hover {
 .card {
   margin: 30px;
   padding: 20px 40px 40px;
-  max-width: 500px;
+  max-width: 800px;
   text-align: center;
   background: #fff;
   border-bottom: 4px solid #ccc;
   border-radius: 6px;
   transition: all .5s;
+}
+.card-image {
+  width: 100%;
+  border-radius: 6px;
+  display: inline-block;
+  background: #79ce01;
+  color: white;
+  padding: 10px 10px;
+  margin: 2px;
+  justify-content: center;
 }
 .card:hover {
   border-color: #ff99ff;
